fix header display css

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,11 @@
     background-position: center center, left top;
 
 }
+
+.project-name, .project-tagline {
+    text-shadow: 0px 0px 60px #159957;
+}
+
+.btn {
+	box-shadow: 0 0 30px #159957;
+}
