fix header's background position in CSS

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@
 	background-image: url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/banner.jpg'), url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/tile.jpg');
 	background-size: cover, 200px;
     background-repeat: no-repeat, repeat;
-    background-position: center center, left top;
+    background-position: center top, left top;
 
 }
 
