fix ToC injection in html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
            "</ul>" +
           "</nav>";
 
-        $(".all-questions").prepend(ToC);
+        $(".file-descriptions").prepend(ToC);
       </script>
     </header>
 
