--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script>
       {{ content }}
 
