--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,38 @@
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       {{ content }}
 
-      <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script>
+      <!-- <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script> -->
+      <script type="text/javascript">
+        var ToC =
+          "<nav role='navigation' class='table-of-contents'>" +
+            "<h2>Jump to file description:</h2>" +
+            "<ul>";
+
+        var newLine, el, title, link;
+
+        $("main h4").each(function() {
+
+          el = $(this);
+          title = el.text();
+          link = "#" + el.attr("id");
+
+          newLine =
+            "<li>" +
+              "<a href='" + link + "'>" +
+                title +
+              "</a>" +
+            "</li>";
+
+          ToC += newLine;
+
+        });
+
+        ToC +=
+           "</ul>" +
+          "</nav>";
+
+        $(".file-descriptions").prepend(ToC);
+      </script>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
