--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,11 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       {{ content }}
 
-      <!-- <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script> -->
-      <script type="text/javascript">
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script>
+      <!-- <script type="text/javascript">
         var ToC =
           "<nav role='navigation' class='table-of-contents'>" +
             "<h2>Jump to file description:</h2>" +
@@ -72,7 +72,7 @@
           "</nav>";
 
         $(".file-descriptions").prepend(ToC);
-      </script>
+      </script> -->
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
