--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
       <!-- <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script> -->
       <script type="text/javascript">
         $(document).ready(function() {
+          alert("hi")
           var ToC =
             "<nav role='navigation' class='table-of-contents'>" +
               "<h2>Jump to file description:</h2>" +
