--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,15 +32,18 @@
     width: 30em;
     font-size: 0.8em;
     padding: 1em 2em;
-    left: 0;
+    margin-left: 0px;
+    float: left;
+    left: 0px;
+    bottom: 0px;
     position: fixed;
     display: block;
-    z-index: 2;
-    border: 2px solid rgba(0, 0, 0, 0.4);
+    border: 2px solid rgba(0,0,0,0.4);
     border-left: none;
     border-radius: 10px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 main h4 a:target {
