removal of secondary background

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,10 @@
 @import 'jekyll-theme-cayman';
 
 .page-header {
-	background-image: url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/banner.jpg'), url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/tile.jpg');
-	background-size: cover, 200px;
-    background-repeat: no-repeat, repeat;
-    background-position: center top, left top;
+	background-image: url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/banner.jpg');
+	background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
 
 
 }
