js injection change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
       {{ content }}
 
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-      <!-- <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script> -->
-      <script type="text/javascript">
+      <script type="text/javascript" src="https://l0lock.github.io/FFmpeg-bat-collection/assets/js/ToC.js"></script>
+      <!-- <script type="text/javascript">
         $(document).ready(function() {
           alert("hi")
           var ToC =
@@ -75,7 +75,7 @@
 
           $(".file-descriptions").prepend(ToC);
         });
-      </script>
+      </script> -->
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
